# string-newtype

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  justfile  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci-rs.yml  drop-cache.yml  pr-title.yml  release-plz.yml  unsoundness.yml
src/: core.rs  lib.rs  smol_str.rs  string.rs
src/core/: traits.rs
