[package]
name = "string-newtype"
version = "0.1.2"
authors = ["Agustin Borgna <agustinborgna@gmail.com>"]
description = "New Type idiom helper for string-like types"
keywords = ["newtype", "string", "wrapper"]
categories = ["strings"]

rust-version = "1.68"
edition = "2021"
homepage = "https://github.com/aborgna/string-newtype"
repository = "https://github.com/aborgna/string-newtype"
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/string-newtype"

[workspace.lints.rust]
missing_docs = "warn"

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
smol_str = { version = ">= 0.2.1, <0.4", optional = true }

[features]
serde = ["dep:serde"]
smol_str = ["dep:smol_str"]
